--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -40,7 +40,7 @@
 
 	<div id="header_rail">
     	<div id="header_content" class="clearfix">
-        	<a href="index.html" id="main_logo">
+        	<a href="/" id="main_logo">
         		Teezil.la Website
         	</a>
 
