--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -495,6 +495,7 @@ a.big_red_button:active {
 	padding:10px;
 	cursor:pointer;
 	width:188px;
+	min-height:238px;
 }
 
 .large_tee_hover {
@@ -840,7 +841,7 @@ a.if_design_wins, a.if_design_wins:visited {
 
 #title_and_description {
 	clear:both;
-	padding: 20px 0 0 0;
+	padding: 10px 0 0 0;
 }
 
 #title_and_description p {
@@ -857,6 +858,7 @@ a.if_design_wins, a.if_design_wins:visited {
 	color:#333;
 	font-family: 'PacificoRegular', serif;
 	font-size:1.8em;
+	line-height:1.4em;
 }
 
 #comments_facebook_login_wrap {
