--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -1,3 +1,8 @@
+{% if env == 'production' %}
+  {% assign asset_url='http://s3.amazonaws.com/teezilla' %}
+{% else %}
+  {% assign asset_url='http://localhost:8080' %}
+{% endif %}
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -16,38 +21,66 @@
   <meta name="author" content="" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	
-  {{ # This will include all stylesheets in `http://localhost:8080` }}
-  {{include_stylesheets}}
-	
+
+  {{content_for_header}}
+
 	<link href="{{asset_url}}/stylesheets/application.css" media="screen" rel="stylesheet" type="text/css" />
 	<link rel="stylesheet" type="text/css" href="{{asset_url}}/javascripts/fancybox/jquery.fancybox-1.3.4.css" media="screen" />
 	<!--[if lte IE 8]><link href="{{asset_url}}/stylesheets/ie.css" media="screen" rel="stylesheet" type="text/css" /><![endif]-->
 	
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.js" type="text/javascript"></script>
 	<script src="{{asset_url}}/javascripts/fancybox/jquery.fancybox-1.3.4.pack.js" type="text/javascript"></script>
-	
   <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.0.6/modernizr.min.js" type="text/javascript"></script>
   
-  {{ # This will include all javascripts in `assets/javascripts` }}
-  {{include_javascripts}}
-	
+  <script src="{{asset_url}}/javascripts/libs/jquery.form.js" type="text/javascript"></script>
+  <script src="{{asset_url}}/javascripts/libs/jquery.validate.min.js" type="text/javascript"></script>
+
 	<script src="{{asset_url}}/javascripts/application.js" type="text/javascript"></script>
 
 </head>
 
 <body>
+  
+  <div id="fb-root"></div>
+  <script>
+    window.fbAsyncInit = function() {
+      FB.init({appId: '', status: true, cookie: true,
+        xfbml: true});
 
+      $(".lnkShareFacebook").click(function() {
+        var name = $("h1.entry_box span").text();
+        FB.ui({
+          method: 'feed',
+          name: 'Go Ape! Share your Adventures',
+          link: window.location.href,
+          picture: $("div#large_tee_col img").attr("src"),
+          caption: name,
+          // description: "",
+          message: "Vote for " + name + " with Teezilla!"
+        }, function(response) {
+          window.console && console.log(response);
+        });
+        return false;
+      });
+    };
+    (function() {
+      var e = document.createElement('script'); e.async = true;
+      e.src = document.location.protocol +
+      '//connect.facebook.net/en_US/all.js';
+      document.getElementById('fb-root').appendChild(e);
+    }());
+  </script>
+  
 	<div id="header_rail">
     	<div id="header_content" class="clearfix">
-        	<a href="/" id="main_logo">
+        	<a href="{{rusic.permalink}}" id="main_logo">
         		Teezil.la Website
         	</a>
 
 			<ul id="main_nav">
-				<li><a href="/">Voting<span>Get Voting Now</span></a></li>
+				<li><a href="{{rusic.permalink}}">Voting<span>Get Voting Now</span></a></li>
 				<li><a href="#">Shop<span>Buy Winning Tees</span></a></li>
-				<li class="last red_nav"><a href="#entry_form" class="simple_login">Submit Your Design<span>Upload your Tee design to Win</span></a></li>
+				<li class="last red_nav"><a href="/ideas/new" class="simple_login">Submit Your Design<span>Upload your Tee design to Win</span></a></li>
 			</ul>
 
 
@@ -60,9 +93,27 @@
 	<div id="main_rail">
     	<div id="main_content" class="clearfix">
 			<div id="main_right_col">
-				
-	     		{{ # This will be replace with the template content }}
-		     	{{yield}}
+				  
+				  {% if error %}
+				    <div class="flash error">
+				      {{ error }}
+				    </div>
+				  {% endif %}
+				  
+				  {% if alert %}
+				    <div class="flash notice">
+				      {{ alert }}
+				    </div>
+				  {% endif %}
+				  
+				  {% if notice %}
+  				  <div class="flash success">
+  			      {{ notice }}
+  			    </div>
+				  {% endif %}
+				  
+          <!-- This will be replace with the template content -->
+	     		{{ yield }}
 
     		</div><!-- end #main_right_col -->
 			
@@ -82,7 +133,7 @@
 				<div class="block_wrapper">
 					<h3>Last Week's Winner</h3>
 					
-					{% for idea in rusic.ideas limit:1 %}	
+					{% for idea in rusic.ideas | limit:1 %}	
 						<div class="medium_thumb clearfix">
 							<a href="{{idea.permalink}}">
 								<img src="{{idea.images.first.square}}" alt="Kreepy Kat Tee" />
@@ -105,7 +156,7 @@
 				<div class="block_wrapper clearfix">
 					<h3>Most popular Tees</h3>
 					
-					{% for idea in rusic.ideas limit:6 %}			              
+					{% for idea in rusic.most_liked_ideas limit:6 %}			              
 						<div class="small_thumb">
 							<a href="{{idea.permalink}}">
 								<img src="{{idea.images.first.thumb}}" alt="{{idea.title}} Tee" />
@@ -143,8 +194,8 @@
 				Please Login with Facebook or Twitter: 
 			</p>
 			<div class="fancybox_facebook_login_wrap clearfix">
-				<a href="#" class="facebook_blue">Login with Facebook</a>
-				<a href="#" class="twitter_blue">Login with Twitter</a>
+				<a href="/users/auth/facebook" class="facebook_blue">Login with Facebook</a>
+				<a href="/users/auth/twitter" class="twitter_blue">Login with Twitter</a>
 			</div><!-- end #fancybox_facebook_login_wrap -->
 		</form>
 		
@@ -167,77 +218,12 @@
 		
 	</div><!-- end #facebook_twitter_vote_form -->
 	
-
-
-	<div id="facebook_twitter_entry_form" class="none">
-		<form id="entry_form" method="post" action="#" class="clearfix">
-			<div class="form_left_col">
-				
-				<p class="error ">Oops! Please correct the fields below</p>
-				<div class="clearfix">
-					<label for="email">Email: </label>
-					<input type="text" id="email" name="email" />
-				</div>
-				<div class="clearfix">
-					<label for="name">Name: </label>
-					<input type="text" id="name" name="name" />
-				</div>
-				<div class="clearfix">
-					<label for="tee_title">Tee Title: </label>
-					<input type="text" id="tee_title" name="tee_title" />
-				</div>
-				<div class="clearfix">
-					<label for="short_tee_description">Short Tee Description: </label>
-					<textarea id="short_tee_description" name="short_tee_description"></textarea>
-				</div>
-				
-				<div class="clearfix">
-					<label for="upload_design">Upload design: </label>
-					<input type="file" id="upload_design" name="upload_design" />
-				</div>
-				
-				<div class="clearfix">
-					<label for="i_agree" class="checkbox">Receive email updates </label>
-					<input type="checkbox" id="i_agree" name="i_agree" class="checkbox" />
-				</div>
-				
-				
-				
-				<div class="clearfix">
-					<input type="hidden" value="Submit" />
-				</div>
-				<div class="fancybox_facebook_login_wrap clearfix">
-					<p class="submit_p">
-						Submit form using your Facebook or Twitter account
-					</p>
-					<a href="#" class="facebook_blue">Submit with Facebook</a>
-					<a href="#" class="twitter_blue">Submit with Twitter</a>
-				</div><!-- end #fancybox_facebook_login_wrap -->
-				
-				
-			</div><!-- end .form_left_col -->
-			
-			<div class="form_right_col">
-				<h4>Checklist</h4>
-				<ul>
-					<li>I'm over 18 and am great</li>
-					<li>This tshirt is my own idea and doesn't come from another creative persons' idea</li>
-					<li>I agree to this site's Terms and Conditions</li>
-					<li>I’d like to hear from TeeZil.la if my design wins</li>
-					
-				</ul>
-			</div><!-- end #form_right_col -->
-			
-		</form>
-
-	</div><!-- end #facebook_twitter_vote_form -->
-    
 	<div id="footer_rail">
     	<div id="footer_content" class="clearfix">
         	
 			<div id="top_share_icons_wrap">
-				<a href="#" class="facebook_grey">Share on Facebook</a>
-				<a href="#" class="twitter_grey">Share on Twitter</a>
+				<a href="#share-on-facebook" class="lnkShareFacebook facebook_grey">Share on Facebook</a>
+				<a href="http://twitter.com/share?text=I'm checking out TeeZilla!&amp;count=none&amp;via=TeeZilla&amp;related=rusicHQ" class="lnkShareTwitter twitter_grey">Share on Twitter</a>
 			</div>
 			
 			<p><a href="#">Teezilla</a> is built and maintained with by <a href="http://www.simpleweb.co.uk" target="_blank">Simpleweb</a>, the realtime digital agency &copy;2011  </p>
